--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~36.0.0",
+    "cheerio": "^1.0.0-rc.3",
+    "expo": "^36.0.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
