--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "axios": "latest"
+    "axios": "latest",
+    "react-native-paper": "latest"
   },
   "devDependencies": {
     "@types/react": "~16.9.0",
