--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-cheerio": "^1.0.0-rc.4",
-    "react-native-paper": "^3.6.0",
+    "react-native-paper": "latest",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-size-matters": "^0.3.0",
     "react-native-web": "~0.11.7",
     "axios": "latest",
-    "react-native-paper": "latest"
+    "expo-secure-store": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
